[tool.poetry]
name = "repl_python3_Shades"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
wikipedia = "^1.4.0"
googletrans = "^3.0.0"
goslate = "^1.5.1"
selenium = "^3.141.0"
lxml = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
